PlayerData now stores the reference to the player and the player's UUID. Move player use skill item event handler to PlayerData. PlayerData now registers itself as listener and the tick() task in its own class.